Layout issue with fieldset legend element https://bugs.webkit.org/show_bug.cgi?id=78684

Patch by SravanKumar Sandela <ssandela@innominds.com> on 2012-03-02
Reviewed by Dirk Pranke.

Source/WebCore:

The clipping logic for legend element was incorrect and now it has been corrected by taking correct offset in to consideration.

Test: fast/forms/fieldset-legend-padding-unclipped-fieldset-border.html

* rendering/RenderFieldset.cpp:
(WebCore::RenderFieldset::paintBoxDecorations):

LayoutTests:

* fast/forms/fieldset-legend-padding-unclipped-fieldset-border.html: Added.

Test case to check un-clipped border logic

* platform/chromium/test_expectations.txt:
* platform/win/fast/forms/fieldset-legend-padding-unclipped-fieldset-border-expected.png: Added.
* platform/win/fast/forms/fieldset-legend-padding-unclipped-fieldset-border-expected.txt: Added.

Canonical link: https://commits.webkit.org/97287@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109612 268f45cc-cd09-0410-ab3c-d52691b4dbfc